--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -16,20 +16,28 @@ body
   padding-top headerHeight
   background #f2f2f2
   background radial-gradient(#F2F2F2,#eee)
-  font-size 16px
-  font-family 'consolas' , 'deja vu sans mono',"lucida grande", "verdana", "arial", sans-serif
+  font-size 14px
+  font-family 'Open sans','Calibri', "arial", sans-serif
 
 
 .container, 
 header,
 section 
   position relative
-  max-width 1600px
+  max-width 960px
   margin 0 auto
   padding 1em
+.main
+  margin 0 auto  
+  max-width 960px
 .main > section .container
   margin 0 auto
   padding 0
+
+section
+  display none
+  &.active
+    display block
 
 header
   height headerHeight
@@ -41,7 +49,8 @@ header
   right 0
   margin-bottom 0
   background #fff
-  border-bottom 1px solid #ccc
+  border 1px solid #ccc
+  border-top 0
   h1
     margin 0
   nav 
@@ -64,7 +73,7 @@ header
       text-decoration none
       border 1px solid #ddd
       border-radius 3px
-      transition 0.1s
+      transition all 0.2s
       &:hover,
       &:focus
         background orange
@@ -74,6 +83,11 @@ header
         background #ddd
         border 1px solid #ccc
         color #999
+      &.active
+        cursor default
+        background #fff
+        border 1px solid transparent
+        color orange
   
 
 h1, h3 
@@ -89,74 +103,75 @@ h3
   margin-top 0
 
     
-.fourth-block,
-.third-block
+.jumper
   display inline-block
   position relative
   vertical-align top
-  width (100/4)%
-  margin-bottom 1px
+  width 100%
   overflow hidden
-  padding 1em
+  padding 0.8em 1em
   padding-bottom 0.5em
-.third-block
-  width (100/3)%
 
 
-.repositories article 
-  background #fff
-  text-align left
-  box-shadow 0 1px 1px rgba(0, 0, 0, 0.2)
-  border-radius 2px
+.repositories 
+  article 
+    position relative
+    padding-left 42%
+    background #fff
+    text-align left
+    box-shadow 0 1px 1px rgba(0, 0, 0, 0.2)
+    border-bottom 1px solid #FFD4BD
+    height 3.4em
+    -webkit-transition all 0.2s
+    transition all 0.2s
+    &:hover
+      height 7em
+    &:nth-child(odd)
+      background #FFF0E8
+  &.large article:hover
+    height 12em
   h3  
     position absolute
+    left 0.4em
+    top 0.4em
     margin 0
-    background rgba(255, 255, 255, 0.8)
     padding 0.2em 0.5em
     font-size 1.5em
-    &:before 
-      content ''
-      display block
-      position absolute
-      right 0
-      top 0
-      border 0.3em solid rgba(0, 0, 0, 0)
-      border-right-color orange
-      border-top 0  
 
-  .picture 
-    transition all 0.2s
-    max-height 40px
-    overflow hidden
-    img 
-      width 100%
 
-  .content 
-    clear both  
-    max-height 12em
-    overflow hidden
-    position relative
-    margin-bottom 0
-    transition all 0.2s
-    &:after
-      display block
-      position absolute
-      right 0
-      bottom 0
-      left 0
-      height 2em
-      background linear-gradient(transparent, #fff)
-      -webkit-transition all 0.2s
-
+.technologies 
+  position relative
+  clear both
+  height 6px
+  padding 0
+  margin 0
+  margin-top 10px
+  margin-bottom 26px
+  border-radius 3px
+  overflow hidden
+  text-align right
+  overflow hidden
+  background #555
+  opacity 0.9
+  li
+    display inline-block
+    vertical-align top
+    height 100%
+    margin 0
+    &.javascript
+      background-color javascript
+    &.css
+      background-color css
 .download-link 
   display inline-block
+  float left
   background #fff
   border 1px solid orange
   color orange
   text-decoration none
   font-size 0.8em
   padding 0.3em 0.5em
-  margin-bottom 10px
+  margin 0 10px 10px 0
   border-radius 3px
   transition all 0.1s
   &:hover 
@@ -167,39 +182,6 @@ h3
     box-shadow inset 0 5px 20px rgba(0,0,0,0.1),  inset 0 1px 0 rgba(0,0,0,0.1)
 
 
-
-.technologies 
-  position relative
-  clear both
-  height 6px
-  padding 0
-  margin 0
-  margin-top 6px
-  margin-bottom 10px
-  border-radius 3px
-  overflow hidden
-  text-align right
-  overflow hidden
-  background #555
-  li
-    display inline-block
-    vertical-align top
-    height 100%
-    font-size 0.8
-    margin 0
-    &.javascript
-      background-color javascript
-    &.css
-      background-color css
-  &:after
-    content ''
-    position: absolute
-    top 0
-    left 0
-    right 0
-    bottom 0
-    display block
-    background linear-gradient(rgba(255,255,255,0.4), transparent)
 
 progress
   -moz-appearance none
@@ -223,33 +205,43 @@ progress
     background-color orange
   &::progress-bar
     background-color orange
+
 section.faces
   background orange
   max-width 100%
   margin 0
+  margin-top 20px
+  padding: 2em
   color #fff
+  border-radius 3px
   a
     color #fff
 
-face-size = 60px
+face-size = 120px
 .faces-list 
   margin 0
-  padding 0
+  padding 20px
+  list-style none
 .faces-list > li
+  display inline-block
+  vertical-align top
+  width (100/3)%
+  height face-size*1.2
+  margin-bottom 20px
+  text-align center
   .picture
     background #fff
     width face-size 
     height face-size
-    display inline-block
     vertical-align middle
     border-radius 50%
     overflow hidden
-    margin-right 1em
+    margin auto
+    margin-bottom 20px
     img
       max-width face-size
   .name
-    display inline-block
-    font-size 1.2em
+    font-size 1.4em
     text-decoration none
 
 .project-list article
