--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -1,9 +1,12 @@
 @charset 'utf-8'
 
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700')
+
+
 javascript = #F15501
 css = #1F085E
 orange = javascript
-headerHeight = 78px
+headerHeight = 5.4em
 
 * 
   -moz-box-sizing border-box
@@ -26,7 +29,6 @@ section
   position relative
   max-width 960px
   margin 0 auto
-  padding 1em
 .main
   margin 0 auto  
   max-width 960px
@@ -52,7 +54,7 @@ header
   border 1px solid #ccc
   border-top 0
   h1
-    margin 0
+    margin 3px
   nav 
     ul
       margin 0
@@ -99,6 +101,7 @@ h1, h3
 h2
   color #333
   color rgba(0,0,0,0.5)
+  padding-left 1em
 h3 
   margin-top 0
 
@@ -119,7 +122,6 @@ h3
     padding-left 42%
     background #fff
     text-align left
-    box-shadow 0 1px 1px rgba(0, 0, 0, 0.2)
     border-bottom 1px solid #FFD4BD
     height 3.4em
     -webkit-transition all 0.2s
@@ -128,6 +130,8 @@ h3
       height 7em
     &:nth-child(odd)
       background #FFF0E8
+    &:nth-child(1)
+      border-top 1px solid #FFD4BD
   &.large article:hover
     height 12em
   h3  
@@ -135,9 +139,8 @@ h3
     left 0.4em
     top 0.4em
     margin 0
-    padding 0.2em 0.5em
+    padding 0 0.5em
     font-size 1.5em
-
 
 .technologies 
   position relative
@@ -191,7 +194,7 @@ progress
   height 6px
   padding 0
   margin 0
-  margin-top 6px
+  margin-top 10px
   margin-bottom 10px
   border 0
   border-radius 3px
@@ -222,11 +225,10 @@ face-size = 120px
   margin 0
   padding 20px
   list-style none
-.faces-list > li
+.faces-list li
   display inline-block
   vertical-align top
   width (100/3)%
-  height face-size*1.2
   margin-bottom 20px
   text-align center
   .picture
@@ -241,31 +243,44 @@ face-size = 120px
     img
       max-width face-size
   .name
-    font-size 1.4em
     text-decoration none
 
-.project-list article
-  background #fff
-  text-align left
-  box-shadow 0 1px 1px rgba(0, 0, 0, 0.2)
-  border-radius 2px
-
-.preview
-  min-height 75px
-  background #f2f2f2
-
-@media (max-width: 1300px)
-  .fourth-block
-    width 20%
-@media (max-width: 1024px)
-  .fourth-block
-    width 25%
 @media (max-width: 1000px)
   .fourth-block
     width (100/3)%
 @media (max-width: 800px)
-  .fourth-block
-    width 50%
-@media (max-width: 600px)
-  .fourth-block
+  body
+    padding-top 7em
+  header
+    height 7em
+    h1
+      text-align center
+  .repositories article
+    padding 1em
+    h3
+      position static
+      margin-top -0.2em
+      maring-bottom 1em
+    &:hover
+      height 9em
+    &.large:hover
+      height 11em
+  header nav
+    position absolute
+    right 0
+    left 0
+    bottom -1px
+    ul
+      position static
+      text-align center
+      li
+        display inline-block
+        a
+          background none
+          border-bottom 0
+          border-radius 3px 3px 0 0
+          &.active
+            background none
+  .faces-list li
     width 100%
+    margin-bottom 2em
