--- a/assets/layout/index.jade
+++ b/assets/layout/index.jade
@@ -2,6 +2,7 @@ doctype
 html(lang='en')
   head
     meta(charset='UTF-8')
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title dddware
     link(rel='stylesheet', href='assets/stylesheets/style.css')
 
