--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -78,16 +78,16 @@ header
       &:hover,
       &:focus
         background orange
-        border 1px solid orange
+        border-color orange
         color #fff
       &:active
         background #ddd
-        border 1px solid #ccc
+        border-color #ccc
         color #999
       &.active
         cursor default
         background #fff
-        border 1px solid transparent
+        border-color transparent
         color orange
   
 
@@ -269,7 +269,7 @@ face-size = 120px
         display inline-block
         a
           background none
-          border-bottom 1px solid orange
+          border-bottom 0
           border-radius 3px 3px 0 0
           &.active
             background none
