--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -5,6 +5,7 @@
 
 javascript = #F15501
 css = #1F085E
+ruby = #F10601
 orange = javascript
 headerHeight = 5.4em
 
@@ -163,6 +164,8 @@ h3
       background-color javascript
     &.css
       background-color css
+    &.ruby
+      background-color ruby
 .download-link 
   display inline-block
   float left
