--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -140,6 +140,13 @@ h3
     margin 0
     padding 0 0.5em
     font-size 1.5em
+    a
+      position relative
+      &:after
+        position absolute
+        content '➚'
+        top 0
+        right -0.8em
 
 .technologies 
   position relative
