--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -148,9 +148,10 @@ h3 {
 }
 .repositories h3 a:after {
   position: absolute;
-  content: '➚';
+  content: '◹';
+  font-size: 0.5em;
   top: 0;
-  right: -0.8em;
+  right: -1em;
 }
 .technologies {
   position: relative;
