--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -144,9 +144,10 @@ h3
       position relative
       &:after
         position absolute
-        content '➚'
+        content '◹'
+        font-size 0.5em
         top 0
-        right -0.8em
+        right -1em
 
 .technologies 
   position relative
