--- a/assets/layout/index.jade
+++ b/assets/layout/index.jade
@@ -2,7 +2,10 @@ doctype
 html(lang='en')
   head
     meta(charset='UTF-8')
+    link( rel="icon" type="image/x-icon" href="/favicon.ico" )
+    link( rel="shortcut icon" type="image/x-icon" href="/favicon.ico" )
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+      
     title dddware
     link(rel='stylesheet', href='assets/stylesheets/style.css')
 
